--- a/targets/spidermonkey/conversions.yaml
+++ b/targets/spidermonkey/conversions.yaml
@@ -110,8 +110,8 @@ conversions:
     "std::string": "${out_value} = std_string_to_jsval(cx, ${in_value})"
     "char*": "${out_value} = c_string_to_jsval(cx, ${in_value})"
     bool: "${out_value} = BOOLEAN_TO_JSVAL(${in_value})"
-    float: "${out_value} = DOUBLE_TO_JSVAL(${in_value})"
-    double: "${out_value} = DOUBLE_TO_JSVAL(${in_value})"
+    float: "${out_value} = JS::DoubleValue(${in_value})"
+    double: "${out_value} = JS::DoubleValue(${in_value})"
     long: "${out_value} = long_to_jsval(cx, ${in_value})"
     "unsigned long": "${out_value} = ulong_to_jsval(cx, ${in_value})"
     "ssize_t": "${out_value} = ssize_to_jsval(cx, ${in_value})"
@@ -142,21 +142,21 @@ conversions:
     "Vec3": "${out_value} = vector3_to_jsval(cx, ${in_value})"
     "BlendFunc": "${out_value} = blendfunc_to_jsval(cx, ${in_value})"
     "AnimationInfo": "${out_value} = animationInfo_to_jsval(cx, ${in_value})"
-    "spEventData*": "${out_value} = ${in_value} == nullptr ? JSVAL_NULL : speventdata_to_jsval(cx, *${in_value})"
-    "spEvent*": "${out_value} = ${in_value} == nullptr ? JSVAL_NULL : spevent_to_jsval(cx, *${in_value})"
-    "spBoneData*": "${out_value} = ${in_value} == nullptr ? JSVAL_NULL : spbonedata_to_jsval(cx, *${in_value})"
-    "spBone*": "${out_value} = ${in_value} == nullptr ? JSVAL_NULL : spbone_to_jsval(cx, *${in_value})"
-    "spSkeleton*": "${out_value} = ${in_value} == nullptr ? JSVAL_NULL : spskeleton_to_jsval(cx, *${in_value})"
-    "spAttachment*": "${out_value} = ${in_value} == nullptr ? JSVAL_NULL : spattachment_to_jsval(cx, *${in_value})"
-    "spSlotData*": "${out_value} = ${in_value} == nullptr ? JSVAL_NULL : spslotdata_to_jsval(cx, *${in_value})"
-    "spSlot*": "${out_value} = ${in_value} == nullptr ? JSVAL_NULL : spslot_to_jsval(cx, *${in_value})"
-    "spTimeline*": "${out_value} = ${in_value} == nullptr ? JSVAL_NULL : sptimeline_to_jsval(cx, *${in_value})"
-    "spAnimationState*": "${out_value} = ${in_value} == nullptr ? JSVAL_NULL : spanimationstate_to_jsval(cx, *${in_value})"
-    "spAnimation*": "${out_value} = ${in_value} == nullptr ? JSVAL_NULL : spanimation_to_jsval(cx, *${in_value})"
-    "spTrackEntry*": "${out_value} = ${in_value} == nullptr ? JSVAL_NULL : sptrackentry_to_jsval(cx, *${in_value})"
+    "spEventData*": "${out_value} = ${in_value} == nullptr ? JS::NullValue() : speventdata_to_jsval(cx, *${in_value})"
+    "spEvent*": "${out_value} = ${in_value} == nullptr ? JS::NullValue() : spevent_to_jsval(cx, *${in_value})"
+    "spBoneData*": "${out_value} = ${in_value} == nullptr ? JS::NullValue() : spbonedata_to_jsval(cx, *${in_value})"
+    "spBone*": "${out_value} = ${in_value} == nullptr ? JS::NullValue() : spbone_to_jsval(cx, *${in_value})"
+    "spSkeleton*": "${out_value} = ${in_value} == nullptr ? JS::NullValue() : spskeleton_to_jsval(cx, *${in_value})"
+    "spAttachment*": "${out_value} = ${in_value} == nullptr ? JS::NullValue() : spattachment_to_jsval(cx, *${in_value})"
+    "spSlotData*": "${out_value} = ${in_value} == nullptr ? JS::NullValue() : spslotdata_to_jsval(cx, *${in_value})"
+    "spSlot*": "${out_value} = ${in_value} == nullptr ? JS::NullValue() : spslot_to_jsval(cx, *${in_value})"
+    "spTimeline*": "${out_value} = ${in_value} == nullptr ? JS::NullValue() : sptimeline_to_jsval(cx, *${in_value})"
+    "spAnimationState*": "${out_value} = ${in_value} == nullptr ? JS::NullValue() : spanimationstate_to_jsval(cx, *${in_value})"
+    "spAnimation*": "${out_value} = ${in_value} == nullptr ? JS::NullValue() : spanimation_to_jsval(cx, *${in_value})"
+    "spTrackEntry*": "${out_value} = ${in_value} == nullptr ? JS::NullValue() : sptrackentry_to_jsval(cx, *${in_value})"
     "Quaternion": "${out_value} = quaternion_to_jsval(cx, ${in_value})"
     "OffMeshLinkData": "${out_value} = offMeshLinkData_to_jsval(cx, ${in_value})"
-    "Uniform*": "${out_value} = ${in_value} == nullptr ? JSVAL_NULL : uniform_to_jsval(cx, ${in_value})"
+    "Uniform*": "${out_value} = ${in_value} == nullptr ? JS::NullValue() : uniform_to_jsval(cx, ${in_value})"
     "ResourceData": "${out_value} = resourcedata_to_jsval(cx, ${in_value})"
     "TouchEventType": "${out_value} = int32_to_jsval(cx, (int)${in_value})"
     "EventType": "${out_value} = int32_to_jsval(cx, (int)${in_value})"
@@ -168,7 +168,7 @@ conversions:
     "b2AABB": "${out_value} = b2AABB_to_jsval(cx, ${in_value})"
     object: |
       if (${in_value}) {
-      ${($level + 1) * '    '}${out_value} = OBJECT_TO_JSVAL(js_get_or_create_jsobject<${ntype.replace("*", "").replace("const ", "")}>(cx, (${ntype.replace("const ", "")})${in_value}));
+      ${($level + 1) * '    '}${out_value} = JS::ObjectOrNullValue(js_get_or_create_jsobject<${ntype.replace("*", "").replace("const ", "")}>(cx, (${ntype.replace("const ", "")})${in_value}));
       ${($level    ) * '    '}} else {
-      ${($level + 1) * '    '}${out_value} = JSVAL_NULL;
+      ${($level + 1) * '    '}${out_value} = JS::NullValue();
       ${($level    ) * '    '}}
