--- a/targets/spidermonkey/conversions.yaml
+++ b/targets/spidermonkey/conversions.yaml
@@ -30,14 +30,14 @@ conversions:
   to_native:
     # jsval to int
     int: "ok &= jsval_to_int32(cx, ${in_value}, (int32_t *)&${out_value})"
-    "unsigned int": "ok &= jsval_to_uint32(cx, ${in_value}, &${out_value})"
-    "unsigned char": "ok &= jsval_to_uint16(cx, ${in_value}, &${out_value})"
-    short: "ok &= jsval_to_int32(cx, ${in_value}, &${out_value})"
-    "unsigned short": "ok &= jsval_to_ushort(cx, ${in_value}, &${out_value})"
-    char: "ok &= jsval_to_int32(cx, ${in_value}, &${out_value})"
-    bool: "${out_value} = JS::ToBoolean(${in_value})"
-    float: "ok &= JS::ToNumber( cx, ${in_value}, &${out_value}) && !std::isnan(${out_value})"
-    double: "ok &= JS::ToNumber( cx, ${in_value}, &${out_value}) && !std::isnan(${out_value})"
+    "unsigned int": "${out_value} = (uint32_t)(${in_value}.toInt32())"
+    "unsigned char": "${out_value} = (uint16_t)(${in_value}.toInt32())"
+    short: "${out_value} = ${in_value}.toInt32()"
+    "unsigned short": "${out_value} = (unsigned short)(${in_value}.toInt32())"
+    char: "${out_value} = ${in_value}.toInt32()"
+    bool: "${out_value} = ${in_value}.toBoolean()"
+    float: "${out_value} = (float)(${in_value}.toNumber())"
+    double: "${out_value} = ${in_value}.toDouble()"
     long: "ok &= jsval_to_long(cx, ${in_value}, &${out_value})"
     "unsigned long": "ok &= jsval_to_ulong(cx, ${in_value}, &${out_value})"
     "ssize_t": "ok &= jsval_to_ssize(cx, ${in_value}, &${out_value})"
@@ -78,8 +78,7 @@ conversions:
     "NavMeshAgentParam": "ok &= jsval_to_NavMeshAgentParam(cx, ${in_value}, &${out_value})"
     "Physics3DRigidBodyDes*": "cocos2d::Physics3DRigidBodyDes tempObj;${out_value}=&tempObj;ok &= jsval_to_physics3DRigidBodyDes(cx, ${in_value}, ${out_value})"
     "TerrainData": "ok &= jsval_to_TerrainData(cx, ${in_value}, &${out_value})"
-    "TMXTileFlags_": "ok &= jsval_to_uint32(cx, ${in_value}, (uint32_t *)&${out_value})"
-    "TMXTileFlags_*": "uint32_t tempData;${out_value}=(cocos2d::TMXTileFlags_*)&tempData;ok &= jsval_to_uint32(cx, ${in_value}, (uint32_t *)&${out_value})"
+    "TMXTileFlags_*": "uint32_t tempData; ${out_value}=(cocos2d::TMXTileFlags_*)&tempData; tempData = (uint32_t)(${in_value}.toInt32())"
     "ResourceData": "ok &= jsval_to_resourcedata(cx, ${in_value}, &${out_value})"
     "_ttfConfig": "ok &= jsval_to_TTFConfig(cx, ${in_value}, &${out_value})"
     "TTFConfig": "ok &= jsval_to_TTFConfig(cx, ${in_value}, &${out_value})"
@@ -100,17 +99,17 @@ conversions:
 
   from_native:
     # int to jsval
-    int: "${out_value} = int32_to_jsval(cx, ${in_value})"
-    "unsigned int": "${out_value} = uint32_to_jsval(cx, ${in_value})"
-    "unsigned short": "${out_value} = ushort_to_jsval(cx, ${in_value})"
-    "unsigned char": "${out_value} = uint32_to_jsval(cx, ${in_value})"
+    int: "${out_value} = JS::Int32Value(${in_value})"
+    "unsigned int": "${out_value} = JS::NumberValue(${in_value})"
+    "unsigned short": "${out_value} = JS::NumberValue(${in_value})"
+    "unsigned char": "${out_value} = JS::NumberValue(${in_value})"
     "long long": "${out_value} = long_long_to_jsval(cx, ${in_value})"
     "@string\\s*&?": "${out_value} = std_string_to_jsval(cx, ${in_value})"
     "@basic_string<char>\\s*&?": "${out_value} = std_string_to_jsval(cx, ${in_value})"
     "std::string": "${out_value} = std_string_to_jsval(cx, ${in_value})"
     "char*": "${out_value} = c_string_to_jsval(cx, ${in_value})"
-    bool: "${out_value} = BOOLEAN_TO_JSVAL(${in_value})"
-    float: "${out_value} = JS::DoubleValue(${in_value})"
+    bool: "${out_value} = JS::BooleanValue(${in_value})"
+    float: "${out_value} = JS::NumberValue(${in_value})"
     double: "${out_value} = JS::DoubleValue(${in_value})"
     long: "${out_value} = long_to_jsval(cx, ${in_value})"
     "unsigned long": "${out_value} = ulong_to_jsval(cx, ${in_value})"
@@ -158,8 +157,8 @@ conversions:
     "OffMeshLinkData": "${out_value} = offMeshLinkData_to_jsval(cx, ${in_value})"
     "Uniform*": "${out_value} = ${in_value} == nullptr ? JS::NullValue() : uniform_to_jsval(cx, ${in_value})"
     "ResourceData": "${out_value} = resourcedata_to_jsval(cx, ${in_value})"
-    "TouchEventType": "${out_value} = int32_to_jsval(cx, (int)${in_value})"
-    "EventType": "${out_value} = int32_to_jsval(cx, (int)${in_value})"
+    "TouchEventType": "${out_value} = JS::Int32Value((int)${in_value})"
+    "EventType": "${out_value} = JS::Int32Value((int)${in_value})"
     "ManifestAsset": "${out_value} = asset_to_jsval(cx, ${in_value})"
     "@DownloadTask.*": "${out_value} = downloadTask_to_jsval(cx, ${in_value})"
     "@shared_ptr<.*DownloadTask.*": "${out_value} = downloadTask_to_jsval(cx, *${in_value})"
