--- a/targets/spidermonkey/conversions.yaml
+++ b/targets/spidermonkey/conversions.yaml
@@ -92,7 +92,7 @@ conversions:
       ${($level + 1) * '    '}if (!${in_value}.isObject()) { ok = false; break; }
       ${($level + 1) * '    '}js_proxy_t *jsProxy;
       ${($level + 1) * '    '}JS::RootedObject tmpObj(cx, ${in_value}.toObjectOrNull());
-      ${($level + 1) * '    '}jsProxy = jsb_get_js_proxy(tmpObj);
+      ${($level + 1) * '    '}jsProxy = jsb_get_js_proxy(cx, tmpObj);
       ${($level + 1) * '    '}${out_value} = (${ntype})(jsProxy ? jsProxy->ptr : NULL);
       ${($level + 1) * '    '}JSB_PRECONDITION2( ${out_value}, cx, false, "Invalid Native Object");
       ${($level + 0) * '    '}} while (0)
@@ -141,21 +141,21 @@ conversions:
     "Vec3": "${out_value} = vector3_to_jsval(cx, ${in_value})"
     "BlendFunc": "${out_value} = blendfunc_to_jsval(cx, ${in_value})"
     "AnimationInfo": "${out_value} = animationInfo_to_jsval(cx, ${in_value})"
-    "spEventData*": "${out_value} = ${in_value} == nullptr ? JS::NullValue() : speventdata_to_jsval(cx, *${in_value})"
-    "spEvent*": "${out_value} = ${in_value} == nullptr ? JS::NullValue() : spevent_to_jsval(cx, *${in_value})"
-    "spBoneData*": "${out_value} = ${in_value} == nullptr ? JS::NullValue() : spbonedata_to_jsval(cx, *${in_value})"
-    "spBone*": "${out_value} = ${in_value} == nullptr ? JS::NullValue() : spbone_to_jsval(cx, *${in_value})"
-    "spSkeleton*": "${out_value} = ${in_value} == nullptr ? JS::NullValue() : spskeleton_to_jsval(cx, *${in_value})"
-    "spAttachment*": "${out_value} = ${in_value} == nullptr ? JS::NullValue() : spattachment_to_jsval(cx, *${in_value})"
-    "spSlotData*": "${out_value} = ${in_value} == nullptr ? JS::NullValue() : spslotdata_to_jsval(cx, *${in_value})"
-    "spSlot*": "${out_value} = ${in_value} == nullptr ? JS::NullValue() : spslot_to_jsval(cx, *${in_value})"
-    "spTimeline*": "${out_value} = ${in_value} == nullptr ? JS::NullValue() : sptimeline_to_jsval(cx, *${in_value})"
-    "spAnimationState*": "${out_value} = ${in_value} == nullptr ? JS::NullValue() : spanimationstate_to_jsval(cx, *${in_value})"
-    "spAnimation*": "${out_value} = ${in_value} == nullptr ? JS::NullValue() : spanimation_to_jsval(cx, *${in_value})"
-    "spTrackEntry*": "${out_value} = ${in_value} == nullptr ? JS::NullValue() : sptrackentry_to_jsval(cx, *${in_value})"
+    "spEventData*": "${out_value} = ${in_value} == nullptr ? JS::NullHandleValue : speventdata_to_jsval(cx, *${in_value})"
+    "spEvent*": "${out_value} = ${in_value} == nullptr ? JS::NullHandleValue : spevent_to_jsval(cx, *${in_value})"
+    "spBoneData*": "${out_value} = ${in_value} == nullptr ? JS::NullHandleValue : spbonedata_to_jsval(cx, *${in_value})"
+    "spBone*": "${out_value} = ${in_value} == nullptr ? JS::NullHandleValue : spbone_to_jsval(cx, *${in_value})"
+    "spSkeleton*": "${out_value} = ${in_value} == nullptr ? JS::NullHandleValue : spskeleton_to_jsval(cx, *${in_value})"
+    "spAttachment*": "${out_value} = ${in_value} == nullptr ? JS::NullHandleValue : spattachment_to_jsval(cx, *${in_value})"
+    "spSlotData*": "${out_value} = ${in_value} == nullptr ? JS::NullHandleValue : spslotdata_to_jsval(cx, *${in_value})"
+    "spSlot*": "${out_value} = ${in_value} == nullptr ? JS::NullHandleValue : spslot_to_jsval(cx, *${in_value})"
+    "spTimeline*": "${out_value} = ${in_value} == nullptr ? JS::NullHandleValue : sptimeline_to_jsval(cx, *${in_value})"
+    "spAnimationState*": "${out_value} = ${in_value} == nullptr ? JS::NullHandleValue : spanimationstate_to_jsval(cx, *${in_value})"
+    "spAnimation*": "${out_value} = ${in_value} == nullptr ? JS::NullHandleValue : spanimation_to_jsval(cx, *${in_value})"
+    "spTrackEntry*": "${out_value} = ${in_value} == nullptr ? JS::NullHandleValue : sptrackentry_to_jsval(cx, *${in_value})"
     "Quaternion": "${out_value} = quaternion_to_jsval(cx, ${in_value})"
     "OffMeshLinkData": "${out_value} = offMeshLinkData_to_jsval(cx, ${in_value})"
-    "Uniform*": "${out_value} = ${in_value} == nullptr ? JS::NullValue() : uniform_to_jsval(cx, ${in_value})"
+    "Uniform*": "${out_value} = ${in_value} == nullptr ? JS::NullHandleValue : uniform_to_jsval(cx, ${in_value})"
     "ResourceData": "${out_value} = resourcedata_to_jsval(cx, ${in_value})"
     "TouchEventType": "${out_value} = JS::Int32Value((int)${in_value})"
     "EventType": "${out_value} = JS::Int32Value((int)${in_value})"
@@ -169,5 +169,5 @@ conversions:
       if (${in_value}) {
       ${($level + 1) * '    '}${out_value} = JS::ObjectOrNullValue(js_get_or_create_jsobject<${ntype.replace("*", "").replace("const ", "")}>(cx, (${ntype.replace("const ", "")})${in_value}));
       ${($level    ) * '    '}} else {
-      ${($level + 1) * '    '}${out_value} = JS::NullValue();
+      ${($level + 1) * '    '}${out_value} = JS::NullHandleValue;
       ${($level    ) * '    '}}
