Refactor JSFunctionWrapper & Use MutableHandleValue for conversion’s return value Upgrade to Spidermonkey v52. pass 8

--- a/targets/spidermonkey/conversions.yaml
+++ b/targets/spidermonkey/conversions.yaml
@@ -103,68 +103,67 @@ conversions:
     "unsigned int": "${out_value} = JS::NumberValue(${in_value})"
     "unsigned short": "${out_value} = JS::NumberValue(${in_value})"
     "unsigned char": "${out_value} = JS::NumberValue(${in_value})"
-    "long long": "${out_value} = long_long_to_jsval(cx, ${in_value})"
-    "@string\\s*&?": "${out_value} = std_string_to_jsval(cx, ${in_value})"
-    "@basic_string<char>\\s*&?": "${out_value} = std_string_to_jsval(cx, ${in_value})"
-    "std::string": "${out_value} = std_string_to_jsval(cx, ${in_value})"
-    "char*": "${out_value} = c_string_to_jsval(cx, ${in_value})"
+    "long long": "ok &= long_long_to_jsval(cx, ${in_value}, &${out_value})"
+    "@string\\s*&?": "ok &= std_string_to_jsval(cx, ${in_value}, &${out_value})"
+    "@basic_string<char>\\s*&?": "ok &= std_string_to_jsval(cx, ${in_value}, &${out_value})"
+    "std::string": "ok &= std_string_to_jsval(cx, ${in_value}, &${out_value})"
+    "char*": "ok &= c_string_to_jsval(cx, ${in_value}, &${out_value})"
     bool: "${out_value} = JS::BooleanValue(${in_value})"
     float: "${out_value} = JS::NumberValue(${in_value})"
     double: "${out_value} = JS::DoubleValue(${in_value})"
-    long: "${out_value} = long_to_jsval(cx, ${in_value})"
-    "unsigned long": "${out_value} = ulong_to_jsval(cx, ${in_value})"
-    "ssize_t": "${out_value} = ssize_to_jsval(cx, ${in_value})"
-    "Point": "${out_value} = ccpoint_to_jsval(cx, ${in_value})"
-    "Rect": "${out_value} = ccrect_to_jsval(cx, ${in_value})"
-    "Size": "${out_value} = ccsize_to_jsval(cx, ${in_value})"
-    "Color4B": "${out_value} = cccolor4b_to_jsval(cx, ${in_value})"
-    "Color4F": "${out_value} = cccolor4f_to_jsval(cx, ${in_value})"
-    "Color3B": "${out_value} = cccolor3b_to_jsval(cx, ${in_value})"
-    "Array*": "${out_value} = ccarray_to_jsval(cx, ${in_value})"
-    "Dictionary*": "${out_value} = ccdictionary_to_jsval(cx, ${in_value})"
-    "AffineTransform": "${out_value} = ccaffinetransform_to_jsval(cx, ${in_value})"
-    "FontDefinition": "${out_value} = FontDefinition_to_jsval(cx, ${in_value})"
-    "String*": "${out_value} = std_string_to_jsval(cx, ${in_value}->getCString())"
-    "@Vector<.*>": "${out_value} = ccvector_to_jsval(cx, ${in_value})"
-    "@Map<std::basic_string.*>": "${out_value} = ccmap_string_key_to_jsval(cx, ${in_value})"
-    "@map<std::basic_string.*,\\s*std::basic_string.*>": "${out_value} = std_map_string_string_to_jsval(cx, ${in_value})"
-    "Value": "${out_value} = ccvalue_to_jsval(cx, ${in_value})"
-    "ValueMap": "${out_value} = ccvaluemap_to_jsval(cx, ${in_value})"
-    "ValueMapIntKey": "${out_value} = ccvaluemapintkey_to_jsval(cx, ${in_value})"
-    "ValueVector": "${out_value} = ccvaluevector_to_jsval(cx, ${in_value})"
-    "@vector<std::basic_string.*>": "${out_value} = std_vector_string_to_jsval(cx, ${in_value})"
-    "@vector<int.*>": "${out_value} = std_vector_int_to_jsval(cx, ${in_value})"
-    "@vector<float.*>": "${out_value} = std_vector_float_to_jsval(cx, ${in_value})"
-    "Acceleration*": "${out_value} = ccacceleration_to_jsval(cx, *${in_value})"
-    "Mat4": "${out_value} = matrix_to_jsval(cx, ${in_value})"
-    "Vec2": "${out_value} = vector2_to_jsval(cx, ${in_value})"
-    "Vec3": "${out_value} = vector3_to_jsval(cx, ${in_value})"
-    "BlendFunc": "${out_value} = blendfunc_to_jsval(cx, ${in_value})"
-    "AnimationInfo": "${out_value} = animationInfo_to_jsval(cx, ${in_value})"
-    "spEventData*": "${out_value} = ${in_value} == nullptr ? JS::NullHandleValue : speventdata_to_jsval(cx, *${in_value})"
-    "spEvent*": "${out_value} = ${in_value} == nullptr ? JS::NullHandleValue : spevent_to_jsval(cx, *${in_value})"
-    "spBoneData*": "${out_value} = ${in_value} == nullptr ? JS::NullHandleValue : spbonedata_to_jsval(cx, *${in_value})"
-    "spBone*": "${out_value} = ${in_value} == nullptr ? JS::NullHandleValue : spbone_to_jsval(cx, *${in_value})"
-    "spSkeleton*": "${out_value} = ${in_value} == nullptr ? JS::NullHandleValue : spskeleton_to_jsval(cx, *${in_value})"
-    "spAttachment*": "${out_value} = ${in_value} == nullptr ? JS::NullHandleValue : spattachment_to_jsval(cx, *${in_value})"
-    "spSlotData*": "${out_value} = ${in_value} == nullptr ? JS::NullHandleValue : spslotdata_to_jsval(cx, *${in_value})"
-    "spSlot*": "${out_value} = ${in_value} == nullptr ? JS::NullHandleValue : spslot_to_jsval(cx, *${in_value})"
-    "spTimeline*": "${out_value} = ${in_value} == nullptr ? JS::NullHandleValue : sptimeline_to_jsval(cx, *${in_value})"
-    "spAnimationState*": "${out_value} = ${in_value} == nullptr ? JS::NullHandleValue : spanimationstate_to_jsval(cx, *${in_value})"
-    "spAnimation*": "${out_value} = ${in_value} == nullptr ? JS::NullHandleValue : spanimation_to_jsval(cx, *${in_value})"
-    "spTrackEntry*": "${out_value} = ${in_value} == nullptr ? JS::NullHandleValue : sptrackentry_to_jsval(cx, *${in_value})"
-    "Quaternion": "${out_value} = quaternion_to_jsval(cx, ${in_value})"
-    "OffMeshLinkData": "${out_value} = offMeshLinkData_to_jsval(cx, ${in_value})"
-    "Uniform*": "${out_value} = ${in_value} == nullptr ? JS::NullHandleValue : uniform_to_jsval(cx, ${in_value})"
-    "ResourceData": "${out_value} = resourcedata_to_jsval(cx, ${in_value})"
+    long: "ok &= long_to_jsval(cx, ${in_value}, &${out_value})"
+    "unsigned long": "ok &= ulong_to_jsval(cx, ${in_value}, &${out_value})"
+    "ssize_t": "ok &= ssize_to_jsval(cx, ${in_value}, &${out_value})"
+    "Point": "ok &= ccpoint_to_jsval(cx, ${in_value}, &${out_value})"
+    "Rect": "ok &= ccrect_to_jsval(cx, ${in_value}, &${out_value})"
+    "Size": "ok &= ccsize_to_jsval(cx, ${in_value}, &${out_value})"
+    "Color4B": "ok &= cccolor4b_to_jsval(cx, ${in_value}, &${out_value})"
+    "Color4F": "ok &= cccolor4f_to_jsval(cx, ${in_value}, &${out_value})"
+    "Color3B": "ok &= cccolor3b_to_jsval(cx, ${in_value}, &${out_value})"
+    "Array*": "ok &= ccarray_to_jsval(cx, ${in_value}, &${out_value})"
+    "Dictionary*": "ok &= ccdictionary_to_jsval(cx, ${in_value}, &${out_value})"
+    "AffineTransform": "ok &= ccaffinetransform_to_jsval(cx, ${in_value}, &${out_value})"
+    "FontDefinition": "ok &= FontDefinition_to_jsval(cx, ${in_value}, &${out_value})"
+    "String*": "ok &= std_string_to_jsval(cx, ${in_value}->getCString(), &${out_value})"
+    "@Vector<.*>": "ok &= ccvector_to_jsval(cx, ${in_value}, &${out_value})"
+    "@Map<std::basic_string.*>": "ok &= ccmap_string_key_to_jsval(cx, ${in_value}, &${out_value})"
+    "@map<std::basic_string.*,\\s*std::basic_string.*>": "ok &= std_map_string_string_to_jsval(cx, ${in_value}, &${out_value})"
+    "Value": "ok &= ccvalue_to_jsval(cx, ${in_value}, &${out_value})"
+    "ValueMap": "ok &= ccvaluemap_to_jsval(cx, ${in_value}, &${out_value})"
+    "ValueMapIntKey": "ok &= ccvaluemapintkey_to_jsval(cx, ${in_value}, &${out_value})"
+    "ValueVector": "ok &= ccvaluevector_to_jsval(cx, ${in_value}, &${out_value})"
+    "@vector<std::basic_string.*>": "ok &= std_vector_string_to_jsval(cx, ${in_value}, &${out_value})"
+    "@vector<int.*>": "ok &= std_vector_int_to_jsval(cx, ${in_value}, &${out_value})"
+    "@vector<float.*>": "ok &= std_vector_float_to_jsval(cx, ${in_value}, &${out_value})"
+    "Acceleration*": "ok &= ccacceleration_to_jsval(cx, *${in_value}, &${out_value})"
+    "Mat4": "ok &= matrix_to_jsval(cx, ${in_value}, &${out_value})"
+    "Vec2": "ok &= vector2_to_jsval(cx, ${in_value}, &${out_value})"
+    "Vec3": "ok &= vector3_to_jsval(cx, ${in_value}, &${out_value})"
+    "BlendFunc": "ok &= blendfunc_to_jsval(cx, ${in_value}, &${out_value})"
+    "AnimationInfo": "ok &= animationInfo_to_jsval(cx, ${in_value}, &${out_value})"
+    "spEventData*": "if (${in_value}) { ok &= speventdata_to_jsval(cx, *${in_value}, &${out_value}); } else { ${out_value} = JS::NullHandleValue; }"
+    "spEvent*": "if (${in_value}) { ok &= spevent_to_jsval(cx, *${in_value}, &${out_value}); } else { ${out_value} = JS::NullHandleValue; }"
+    "spBoneData*": "if (${in_value}) { ok &= spbonedata_to_jsval(cx, *${in_value}, &${out_value}); } else { ${out_value} = JS::NullHandleValue; }"
+    "spBone*": "if (${in_value}) { ok &= spbone_to_jsval(cx, *${in_value}, &${out_value}); } else { ${out_value} = JS::NullHandleValue; }"
+    "spSkeleton*": "if (${in_value}) { ok &= spskeleton_to_jsval(cx, *${in_value}, &${out_value}); } else { ${out_value} = JS::NullHandleValue; }"
+    "spAttachment*": "if (${in_value}) { ok &= spattachment_to_jsval(cx, *${in_value}, &${out_value}); } else { ${out_value} = JS::NullHandleValue; }"
+    "spSlotData*": "if (${in_value}) { ok &= spslotdata_to_jsval(cx, *${in_value}, &${out_value}); } else { ${out_value} = JS::NullHandleValue; }"
+    "spSlot*": "if (${in_value}) { ok &= spslot_to_jsval(cx, *${in_value}, &${out_value}); } else { ${out_value} = JS::NullHandleValue; }"
+    "spTimeline*": "if (${in_value}) { ok &= sptimeline_to_jsval(cx, *${in_value}, &${out_value}); } else { ${out_value} = JS::NullHandleValue; }"
+    "spAnimationState*": "if (${in_value}) { ok &= spanimationstate_to_jsval(cx, *${in_value}, &${out_value}); } else { ${out_value} = JS::NullHandleValue; }"
+    "spAnimation*": "if (${in_value}) { ok &= spanimation_to_jsval(cx, *${in_value}, &${out_value}); } else { ${out_value} = JS::NullHandleValue; }"
+    "spTrackEntry*": "if (${in_value}) { ok &= sptrackentry_to_jsval(cx, *${in_value}, &${out_value}); } else { ${out_value} = JS::NullHandleValue; }"
+    "Quaternion": "ok &= quaternion_to_jsval(cx, ${in_value}, &${out_value})"
+    "Uniform*": "if (${in_value}) { ok &= uniform_to_jsval(cx, ${in_value}, &${out_value}); } else { ${out_value} = JS::NullHandleValue; }"
+    "ResourceData": "ok &= resourcedata_to_jsval(cx, ${in_value}, &${out_value})"
     "TouchEventType": "${out_value} = JS::Int32Value((int)${in_value})"
     "EventType": "${out_value} = JS::Int32Value((int)${in_value})"
-    "ManifestAsset": "${out_value} = asset_to_jsval(cx, ${in_value})"
-    "@DownloadTask.*": "${out_value} = downloadTask_to_jsval(cx, ${in_value})"
-    "@shared_ptr<.*DownloadTask.*": "${out_value} = downloadTask_to_jsval(cx, *${in_value})"
-    "b2Vec2": "${out_value} = b2Vec2_to_jsval(cx, ${in_value})"
-    "b2Manifold*": "${out_value} = b2Manifold_to_jsval(cx, ${in_value})"
-    "b2AABB": "${out_value} = b2AABB_to_jsval(cx, ${in_value})"
+    "ManifestAsset": "ok &= asset_to_jsval(cx, ${in_value}, &${out_value})"
+    "@DownloadTask.*": "ok &= downloadTask_to_jsval(cx, ${in_value}, &${out_value})"
+    "@shared_ptr<.*DownloadTask.*": "ok &= downloadTask_to_jsval(cx, *${in_value}, &${out_value})"
+    "b2Vec2": "ok &= b2Vec2_to_jsval(cx, ${in_value}, &${out_value})"
+    "b2Manifold*": "ok &= b2Manifold_to_jsval(cx, ${in_value}, &${out_value})"
+    "b2AABB": "ok &= b2AABB_to_jsval(cx, ${in_value}, &${out_value})"
     object: |
       if (${in_value}) {
       ${($level + 1) * '    '}${out_value} = JS::ObjectOrNullValue(js_get_or_create_jsobject<${ntype.replace("*", "").replace("const ", "")}>(cx, (${ntype.replace("const ", "")})${in_value}));
