--- a/targets/spidermonkey/conversions.yaml
+++ b/targets/spidermonkey/conversions.yaml
@@ -138,18 +138,18 @@ conversions:
     "Vec3": "ok &= Vec3_to_seval(${in_value}, &${out_value})"
     "BlendFunc": "ok &= blendfunc_to_seval(${in_value}, &${out_value})"
     # "AnimationInfo": "${out_value} = animationInfo_to_seval(${in_value})"
-    "spEventData*": "ok &= speventdata_to_seval(*${in_value}, &${out_value})"
-    "spEvent*": "ok &= spevent_to_seval(*${in_value}, &${out_value})"
-    "spBoneData*": "ok &= spbonedata_to_seval(*${in_value}, &${out_value})"
-    "spBone*": "ok &= spbone_to_seval(*${in_value}, &${out_value})"
-    "spSkeleton*": "ok &= spskeleton_to_seval(*${in_value}, &${out_value})"
-    "spAttachment*": "ok &= spattachment_to_seval(*${in_value}, &${out_value})"
-    "spSlotData*": "ok &= spslotdata_to_seval(*${in_value}, &${out_value})"
-    "spSlot*": "ok &= spslot_to_seval(*${in_value}, &${out_value})"
-    "spTimeline*": "ok &= sptimeline_to_seval(*${in_value}, &${out_value})"
-    "spAnimationState*": "ok &= spanimationstate_to_seval(*${in_value}, &${out_value})"
-    "spAnimation*": "ok &= spanimation_to_seval(*${in_value}, &${out_value})"
-    "spTrackEntry*": "ok &= sptrackentry_to_seval(*${in_value}, &${out_value})"
+    "spEventData*": "ok &= speventdata_to_seval(${in_value}, &${out_value})"
+    "spEvent*": "ok &= spevent_to_seval(${in_value}, &${out_value})"
+    "spBoneData*": "ok &= spbonedata_to_seval(${in_value}, &${out_value})"
+    "spBone*": "ok &= spbone_to_seval(${in_value}, &${out_value})"
+    "spSkeleton*": "ok &= spskeleton_to_seval(${in_value}, &${out_value})"
+    "spAttachment*": "ok &= spattachment_to_seval(${in_value}, &${out_value})"
+    "spSlotData*": "ok &= spslotdata_to_seval(${in_value}, &${out_value})"
+    "spSlot*": "ok &= spslot_to_seval(${in_value}, &${out_value})"
+    "spTimeline*": "ok &= sptimeline_to_seval(${in_value}, &${out_value})"
+    "spAnimationState*": "ok &= spanimationstate_to_seval(${in_value}, &${out_value})"
+    "spAnimation*": "ok &= spanimation_to_seval(${in_value}, &${out_value})"
+    "spTrackEntry*": "ok &= sptrackentry_to_seval(${in_value}, &${out_value})"
     "Quaternion": "ok &= Quaternion_to_seval(${in_value}, &${out_value})"
     # "OffMeshLinkData": "${out_value} = offMeshLinkData_to_seval(${in_value})"
     "Uniform*": "ok &= uniform_to_seval(${in_value}, &${out_value})"
