--- a/targets/spidermonkey/conversions.yaml
+++ b/targets/spidermonkey/conversions.yaml
@@ -75,7 +75,7 @@ conversions:
     "BlendFunc": "ok &= seval_to_blendfunc(${in_value}, &${out_value})"
     "_ttfConfig": "ok &= seval_to_TTFConfig(${in_value}, &${out_value})"
     "TTFConfig": "ok &= seval_to_TTFConfig(${in_value}, &${out_value})"
-    # "AnimationInfo": "ok &= seval_to_animationInfo(${in_value}, &${out_value})"
+    "AnimationInfo": "ok &= seval_to_animationInfo(${in_value}, &${out_value})"
     "Quaternion": "ok &= seval_to_Quaternion(${in_value}, &${out_value})"
     # "Ray": "ok &= seval_to_ray(${in_value}, &${out_value})"
     # "NavMeshAgentParam": "ok &= seval_to_NavMeshAgentParam(${in_value}, &${out_value})"
@@ -137,7 +137,7 @@ conversions:
     "Vec2": "ok &= Vec2_to_seval(${in_value}, &${out_value})"
     "Vec3": "ok &= Vec3_to_seval(${in_value}, &${out_value})"
     "BlendFunc": "ok &= blendfunc_to_seval(${in_value}, &${out_value})"
-    # "AnimationInfo": "${out_value} = animationInfo_to_seval(${in_value})"
+    "AnimationInfo": "ok &= animationInfo_to_seval(${in_value}, &${out_value} )"
     "spEventData*": "ok &= speventdata_to_seval(${in_value}, &${out_value})"
     "spEvent*": "ok &= spevent_to_seval(${in_value}, &${out_value})"
     "spBoneData*": "ok &= spbonedata_to_seval(${in_value}, &${out_value})"
